--- a/ManageSystem/BackEnd/package.json
+++ b/ManageSystem/BackEnd/package.json
@@ -3,14 +3,22 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon app.js",
+    "run": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@escook/express-joi": "^1.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
+    "joi": "^17.4.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2"
   }
 }
