--- a/ManageSystem/BackEnd/package.json
+++ b/ManageSystem/BackEnd/package.json
@@ -19,6 +19,7 @@
     "express-jwt": "^8.4.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
