--- a/ManageSystem/front-end/package.json
+++ b/ManageSystem/front-end/package.json
@@ -12,17 +12,22 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.7.3",
     "element-plus": "^2.8.0",
+    "mitt": "^3.0.1",
     "multer": "^1.4.5-lts.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "save": "^2.9.0",
     "vite-plugin-svg-icons": "^2.0.1",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
+    "@types/js-md5": "^0.7.2",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitejs/plugin-vue-jsx": "^4.0.0",
