--- a/ManageSystem/front-end/package.json
+++ b/ManageSystem/front-end/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@types/echarts": "^4.9.22",
     "@wangeditor/editor": "^5.1.23",
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^1.7.3",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.0",
     "mitt": "^3.0.1",
     "multer": "^1.4.5-lts.1",
@@ -22,6 +24,7 @@
     "pinia-plugin-persistedstate": "^3.2.1",
     "save": "^2.9.0",
     "vite-plugin-svg-icons": "^2.0.1",
+    "vite-svg-loader": "^5.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.4.3"
   },
